# transformer-timeseries-finetuning

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  train_patch_tst_classification.py
