[project]
name = "transformer-timeseries-finetuning"
version = "0.1.0"
description = "Example of finetuning a transformer model on a timeseries dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.1",
    "transformers>=4.52.4",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.0",
]
